# Simulador-de-jogos

./: Cargo.toml  README.md
docs/: asteroids.wasm  index.html
src/: asteroids.rs  flappy_bird.rs  main.rs
